# c_c-_final

book_task/: CMakeLists.txt  main.cpp
book_task/cpt_4/: cpt_4_q_27.h  cpt_4_q_34.h  cpt_4_q_36.h
book_task/cpt_5/: cpt_5_q_12.h  cpt_5_q_23.h
book_task/cpt_6/: cpt_6_q_11.h  cpt_6_q_30.h  cpt_6_q_38_39.h
book_task/cpt_7/: cpt_7_q_24.h
book_task/note/: note++.txt  note.md  task.txt
book_task/playground/: playground_expcetion_handle.h  playground_inline.cpp  playground_inline.h  playground_operator_override_arr.h  playground_placement_new.h  playground_return_tricky.h
playground/: CMakeLists.txt  main.cpp
playground/book/cpt10/: date.h  friend.h  static.h
playground/book/cpt11/: obj.h  proxy.cpp  proxy.h
playground/demo/: cin_test.h
playground/final/: final_task_3.h
playground/memset/: myfirst.h
playground/note/: note.md
playground/playground/: explicit.h  inline.cpp  inline.h  overloading.h  template.h  virtual.h
practice/: CMakeLists.txt  main.cpp
practice/task/2013/task1/: task_2013_1.h
practice/task/2013/task10/: task_2013_10.h
practice/task/2013/task11/: task_2013_11.h
practice/task/2013/task17/: task_2013_17.h
practice/task/2013/task2/: task_2013_2.h
practice/task/2013/task3/: task_2013_3.h
practice/task/2013/task3_2/: task_2013_task3_2.h
practice/task/2013/task3_3/: task_2013_task3_3.h
practice/task/2013/task4/: task_2013_4.h
practice/task/2013/task5/: task_2013_5.h
practice/task/2013/task7/: task_2013_7.h
practice/task/2013/task8/: task_2013_8.h
practice/task/2013/task9/: task_2013_9.h
(+89 files in other folders)
