cmake_minimum_required(VERSION 3.13)
project(book_task)

set(CMAKE_CXX_STANDARD 14)

add_executable(book_task main.cpp cpt_4/cpt_4_q_27.h cpt_4/cpt_4_q_34.h cpt_4/cpt_4_q_36.h cpt_5/cpt_5_q_12.h cpt_5/cpt_5_q_23.h cpt_6/cpt_6_q_11.h cpt_6/cpt_6_q_30.h cpt_6/cpt_6_q_38_39.h playground/playground_operator_override_arr.h cpt_7/cpt_7_q_24.h playground/playground_return_tricky.h playground/playground_expcetion_handle.h playground/playground_placement_new.h playground/playground_inline.h playground/playground_inline.cpp)