cmake_minimum_required(VERSION 3.13)
project(practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice main.cpp task/2013/task1/task_2013_1.h task/2013/task2/task_2013_2.h task/2013/task3/task_2013_3.h task/2013/task4/task_2013_4.h task/2013/task5/task_2013_5.h task/2013/task7/task_2013_7.h task/2013/task8/task_2013_8.h task/2013/task9/task_2013_9.h task/2013/task10/task_2013_10.h task/2013/task11/task_2013_11.h task/2013/task17/task_2013_17.h task/2013/task3_2/task_2013_task3_2.h task/2013/task3_3/task_2013_task3_3.h)